--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 body {
-    background-color: darkslategrey;
+    background-color: rgb(97, 115, 173);
     text-align: center;
 }
   
 #container {
     width: 40vw;
     height: 40vw;
-    margin: 2vw auto;
-    background-color: #0c1021;
-    border: solid 10px slategrey;
+    margin: 20px auto;
+    background-color: #020307;
+    border: solid 8px rgb(140, 112, 144);
     border-radius: 10px;
 
     -webkit-box-shadow: 0px 0px 20px 3px rgba(0, 0, 0, 0.6);
@@ -25,7 +25,6 @@ body {
 
 .snakeBodyPixel {
     background-color: #fd6401;
-    box-shadow: 0 0 5px #fd6401;
 }
 
 .food {
@@ -35,15 +34,15 @@ body {
 #scoreContainer {
     width: 40vw;
     display: flex;
-    margin: auto;
     justify-content: space-around;
+    margin: auto;
 }
 
 .scoreBoard {
     border-radius: 10px;
-    border: solid 5px slategrey;
-    color: dimgray;
-    background-color: #0c1021;
+    border: solid 5px rgb(140, 112, 144);
+    color: whitesmoke;
+    background-color: #020307;
     display: inline-block;
     padding: 1vw;
     width: 40%;
